2014.08.05 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Use SDL_WaitEvent() instead of SDL_PollEvent().

2014.07.25 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/URI_testset.inc, tests/test_split_urls.c, tests/Makefile.am,
	  .gitignore:
	  - A new test suite evaluating splitting efficiency has been added.
	  - Still undertrial.

2014.07.24 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Code refactoring (QRinput_Struct_count has been added).
	  - And more code cleanups.
	  - Avoid to add a Structued-append chunk when only one symbol is
	    generated. (Thanks to Yoshimichi Inoue)
	* tests/test_qrinput.c:
	  - New test has been added.
	* qrinput.c, qrencode.1.in:
	  - Added new option, "verbose".
	* tests/common.h:
	  - printQRinputStruct() has been added.
	* rsecc.{c,h}:
	  - Copyright notice and credit has been corrected.
	* README, README.md:
	  - ACKNOWLEDGMENTS updates.
	[3.4]
	  - Bumped version to 3.4.4.
	* Version 3.4.4 has ben released.

2014.07.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrinput.c, tests/test_qrinput.c:
	  - Code cleanups.
	  - Some possible minor bugs has been fixed.

2014.07.07 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Serious typo fix.

2014.07.06 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrencode.1.in:
	  - Added a new image type PNG32 (direct color mode). (Thanks to Greg Hart)

2014.07.04 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* use/config.rpath:
	  - Updated to the newer version bundled with gettext-0.18.3.2.
	* acinclude.m4:
	  - Added iconv.m4, lib-{link,ld,prefix}.m4 for Mac OS.
	* autogen.sh:
	  - mkdir m4 if not exist.
	* qrencode.h:
	  - Fixed some doxygen commands.

2014.06.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrencode.1.in:
	  - Merged pull-request #44. (Thanks to Antenore)
	  - Fixed some format issues.

2014.06.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrencode.c:
	  - A memory leak bug has been fixed. (Thanks to @win32asm)
	* bitstream.c: