@@ -1,13 +1,21 @@
+AM_CFLAGS =
+AM_LDFLAGS =
+
 if HAVE_SDL
 sdlPROGRAMS = view_qrcode
+AM_CFLAGS += $(SDL_CFLAGS)
+AM_LDFLAGS += $(SDL_LIBS)
+endif
+
+if HAVE_PNG
+pngPROGRAMS = create_frame_pattern create_mqr_frame_pattern
 endif
 
 noinst_PROGRAMS = test_qrinput test_bitstream test_estimatebit \
 				  test_qrspec test_rs test_qrencode prof_qrencode \
 				  test_mqrspec test_split test_monkey test_mask test_mmask \
-				  create_frame_pattern create_mqr_frame_pattern \
 				  test_split_urls \
-				  $(sdlPROGRAMS)
+				  $(pngPROGRAMS) $(sdlPROGRAMS)
 noinst_LIBRARIES = libdecoder.a
 DECODER_LIBS = libdecoder.a $(LIBICONV)
 noinst_HEADERS = common.h rscode.h
@@ -61,16 +69,17 @@ prof_qrencode_LDADD = ../libqrencode.la
 pthread_qrencode_SOURCES = pthread_qrencode.c
 pthread_qrencode_LDADD = ../libqrencode.la $(LIBPTHREAD)
 
+if HAVE_PNG
 create_frame_pattern_SOURCES = create_frame_pattern.c
-create_frame_pattern_CFLAGS = $(png_CFLAGS)
-create_frame_pattern_LDADD = ../libqrencode.la $(png_LIBS)
+create_frame_pattern_CFLAGS = $(png_CFLAGS) $(AM_CFLAGS)
+create_frame_pattern_LDADD = ../libqrencode.la $(png_LIBS) $(AM_LDFLAGS)
 
 create_mqr_frame_pattern_SOURCES = create_mqr_frame_pattern.c
-create_mqr_frame_pattern_CFLAGS = $(png_CFLAGS)
-create_mqr_frame_pattern_LDADD = ../libqrencode.la $(png_LIBS)
+create_mqr_frame_pattern_CFLAGS = $(png_CFLAGS) $(AM_CFLAGS)
+create_mqr_frame_pattern_LDADD = ../libqrencode.la $(png_LIBS) $(AM_LDFLAGS)
+endif
 
 if HAVE_SDL
 view_qrcode_SOURCES = view_qrcode.c
-view_qrcode_CFLAGS= $(SDL_CFLAGS)
-view_qrcode_LDADD = ../libqrencode.la $(SDL_LIBS)
+view_qrcode_LDADD = ../libqrencode.la
 endif
